[package]
name = "t1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
glam = "0.20"
image = "0.23"
log = "0.4"
pollster = "0.2"
wgpu = { version = "0.12", git = "https://github.com/gfx-rs/wgpu" }
winit = "0.26"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
