[package]
name = "tu1"
version = "0.1.0"
authors = ["Hiroaki Yutani <yutani.ini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = { version = "0.7", git = "https://github.com/gfx-rs/wgpu-rs" }
futures = "0.3"
